--- a/servicio-items-prod.properties
+++ b/servicio-items-prod.properties
@@ -1,2 +1,2 @@
-server.port=8005
-configuracion.texto=Configurando entorno por de producción
+server.port=8007
+configuracion.texto=Configurando entorno de producción
