--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando entorno desarrollo...
-configuracion.autor.nombre=Daniel
-configuracion.autor.email=drgaonas24@gmail.com
+configuracion.texto=Configurando entorno desarrollo
+configuracion.autor.nombre=Cristian
+configuracion.autor.email=crgaonas24@gmail.com
