--- a/servicio-usuarios-dev.properties
+++ b/servicio-usuarios-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud?serverTimezone=America/Guayaquil
+spring.datasource.url=jdbc:postgresql://microservicios-postgres12:5432/db_springboot_cloud?serverTimezone=America/Guayaquil
 spring.datasource.username=postgres
 spring.datasource.password=crisda24
 spring.datasource.driver-class-name=org.postgresql.Driver
