--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -1,14 +1,7 @@
+spring.datasource.url=jdbc:mysql://microservicios-mysql8:3306/db_springboot_cloud?serverTimezone=America/Guayaquil
+spring.datasource.username=root
+spring.datasource.password=crisda24
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:mysql}:${RDS_PORT:3306}/${RDS_DB_NAME:products}
-spring.datasource.username=${RDS_USERNAME:crisda24-user}
-spring.datasource.password=${RDS_PASSWORD:crisda24}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-logging.level.org.hibernate.SQL=debug
-
-#spring.datasource.url=jdbc:mysql://microservicios-mysql8:3306/db_springboot_cloud?serverTimezone=America/Guayaquil
-#spring.datasource.username=root
-#spring.datasource.password=crisda24
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#AWS
+AWS
