--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -3,4 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=crisda24
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=debug
