Configurando URIS zipkin y rabbitmq

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 config.security.oauth.client.id=frontendapp
 config.security.oauth.client.secret=12345
 config.security.oauth.jwt.key=algun_codigo_secreto_aeoiu
-spring.zipkin.base-url=http://zipkin-server:9411/
-spring.rabbitmq.host=microservicios-rabbitmq38
+spring.zipkin.base-url=http://ec2-35-171-51-76.compute-1.amazonaws.com/
+spring.rabbitmq.host=http://ec2-34-202-150-60.compute-1.amazonaws.com/
 spring.zipkin.sender.type=rabbit
