--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 config.security.oauth.client.id=frontendapp
 config.security.oauth.client.secret=12345
 config.security.oauth.jwt.key=algun_codigo_secreto_aeoiu
-spring.zipkin.base-url=http://35.171.51.76:80/
+#spring.zipkin.base-url=http://35.171.51.76:80/
 #spring.zipkin.base-url=http://ec2-35-171-51-76.compute-1.amazonaws.com/
 #spring.rabbitmq.host=microservicios-rabbitmq38
 #spring.zipkin.sender.type=rabbit
