--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -1,7 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud?serverTimezone=America/Guayaquil
-spring.datasource.username=root
-spring.datasource.password=crisda24
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#AWS
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:mysql}:${RDS_PORT:3306}/${RDS_DB_NAME:products}
+spring.datasource.username=${RDS_USERNAME:crisda24-user}
+spring.datasource.password=${RDS_PASSWORD:crisda24}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.hibernate.SQL=debug
+
+#Local
+#spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud?serverTimezone=America/Guayaquil
+#spring.datasource.username=root
+#spring.datasource.password=crisda24
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
